# asymptote-ffi-helper-lib

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.in  README.txt  configure.ac
.zed/: settings.json
examples/: CMakeLists.txt  threadSample.cc
include/: asyffihelper.h
include/asyffihelpers/: contextFuncs.h  functions.h  item.h  macros.h  threads.h  types.h  typesObjs.h  typesTemplates.h
src/: contextFuncs.cc  functions.cc  item.cc  threads.cc  typeObjs.cc  types.cc  typesTemplates.cc
